fixed messenger spacing

--- a/src/components/Messanger/Messanger.scss
+++ b/src/components/Messanger/Messanger.scss
@@ -31,6 +31,7 @@
   height: 100px;
   border-radius: 3px;
   margin: 0 130px;
+  margin-bottom: 20px;
 }
 .msg-input:focus {
   background-color: white;
